--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -1,14 +1,39 @@
+@import "./Global.css";
+
 body {
-  background-color: #DB4C40;
-  color: #FFFFFF;
-  font-family: 'Nunito', sans-serif;
+  color: var(--text-color);
+  font-family: var(--main-font);
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
+
+/* Mobile-first styles */
+
+.header-title {
+  margin: 88px var(--mobile-margin) var(--mobile-margin) var(--mobile-margin);
+}
+
+.header-title h1 {
+  font-size: 3rem;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.header-title h2 {
+  font-size: 1.5rem;
+  margin: 0;
+}
+
 .container {
-  margin: 100px;
+  padding: var(--mobile-margin);
+  background-color: var(--paleyellow-colour);
+  box-shadow: var(--drop-shadow);
+}
+
+.container h1 {
+  margin-top: 0;
 }
 
 .create-activity-form {
