Completed most of the basic styling for Home, Activity and Receipt. Added a Footer component to give the app an obvious end, once the user scrolls to the bottom

--- a/client/src/css/ActivityList.css
+++ b/client/src/css/ActivityList.css
@@ -41,6 +41,7 @@
   color: var(--shadow-grey);
   transition: color var(--hover-speed);
   margin-left: 20px;
+  cursor: pointer;
 }
 
 .activity-button .right-side button:hover {
