--- a/client/src/css/AddReceiptForm.css
+++ b/client/src/css/AddReceiptForm.css
@@ -1,24 +1,13 @@
-.overlay {
-  background-color: rgba(0, 0, 0, 0.39);
-  position: fixed;
-  height: 100%;
-  top:0;
-  left:0;
-  width: 100%;
-}
-
-.overlay .overlay-container {
+.add-receipt-form {
   background-color: #FFF;
+  width: 400px;
+  border-radius: 5px;
   border: 2px solid var(--shadow-grey);
-  padding: 10px;
-  width: 90vw;
-  position: fixed;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  padding: 20px;
+  box-shadow: var(--drop-shadow);
 }
 
-.overlay .overlay-container input {
+.add-receipt-form input {
   height: 50px;
   font-family: var(--main-font);
   font-size: 1.5rem;
@@ -28,15 +17,7 @@
   margin-bottom: 25px;
 }
 
-.overlay .overlay-container input:focus {
-  outline: none;
-}
-
-.overlay .overlay-container select {
-  margin-bottom: 25px;
-}
-
-.overlay .overlay-container button {
+.add-receipt-form button {
   font-family: var(--main-font);
   font-size: 1rem;
   font-weight: 700;
@@ -45,17 +26,28 @@
   background-color: var(--pink-colour);
   border-radius: 20px;
   box-shadow: var(--drop-shadow);
-  width: 100px;
+  width: 120px;
   transition: background-color var(--hover-speed);
   margin-right: 10px;
 }
 
-.overlay .overlay-container button:hover {
+.add-receipt-form input:focus {
+  outline: none;
+}
+
+.add-receipt-form select:focus {
+  outline: none;
+}
+
+.add-receipt-form button:hover {
   background-color: #FFC2D5;
   cursor: pointer;
 }
 
-.overlay .overlay-container button:focus {
+.add-receipt-form button:focus {
   outline: none;
 }
 
+.add-receipt-form select {
+  margin-bottom: 25px;
+}
