--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -36,6 +36,10 @@ body {
   margin-top: 0;
 }
 
+.container h2 {
+  margin-top: var(--mobile-margin);
+}
+
 .create-activity-form {
   margin: 50px 0px;
 }
